perf(bootstrap): apply GC tuning on bare-metal fork (Docker parity)
The bare-metal fork() path added only CDS + encoding + SIMD flags, leaving
the forked child on the JVM's untuned default GC while GcAdvisor only
*recommended* a better one. docker/entrypoint.sh already ships Aikar G1;
this closes the gap.

applyGcFlags():
- respects any operator-provided GC (-XX:+UseG1GC/UseZGC/UseZ/UseParallelGC/
  UseShenandoahGC/UseSerialGC/UseEpsilonGC) — skips ours, logs it
- -Xms >= 8G -> ZGC generational (GcAdvisor's advice, low pause on big heaps)
- otherwise -> Aikar-style G1, verbatim mirror of entrypoint.sh GC_FLAGS
- de-dupes UnlockExperimentalVMOptions; logs the chosen GC

Pure-efficiency, zero gameplay effect, operator choice always wins.
Boot-proven on bare-metal fork: "applied GC tuning — Aikar-style G1".

Claude-Session: https://claude.ai/code/session_01BnZNijro2QyAvtD2pfRbM2